syntax = "proto2";
package dhc;

//using index player_guid 0

message role_t {
	optional uint64 guid				= 1;
	optional uint64 player_guid			= 2;
	optional int32	template_id			= 3;
	optional int32	level				= 4;
}
